✨ feat(auth): добавить функционал авторизации и управления пользователем
- реализована проверка сохраненных учетных данных при инициализации
- добавлена обработка входа через форму авторизации
- улучшена логика переключения между экранами
- добавлен выход из системы с очисткой данных

♻️ refactor(config): переработать систему конфигурации

- изменена структура класса Config на singleton
- улучшена обработка ошибок при загрузке/сохранении
- добавлены значения по умолчанию
- оптимизированы методы работы с файлами

⚡️ perf(main): оптимизировать процесс загрузки и обновления

- реализована фоновая проверка обновлений
- добавлена мультипоточная загрузка ресурсов
- улучшено отображение прогресса
- добавлена обработка ошибок

🌐 i18n: обновить текстовые элементы интерфейса

- синхронизированы тексты между экранами
- добавлены подсказки и сообщения об ошибках
- улучшено форматирование текстовых элементов

📦 build: обновить конфигурацию сборки

- изменена версия Java на 16
- обновлены зависимости
- добавлена поддержка разных платформ
- настроен плагин shade для создания fat jar